--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "AgileDemo",
-  "description": "for demo only,
+  "description": "for demo only",
   "main": "",
   "authors": [
     "Agile Infoways <demo@agileinfoways.com>"
